--- a/.github/workflows/simple.yaml
+++ b/.github/workflows/simple.yaml
@@ -20,6 +20,7 @@ jobs:
         shell: python
   run-window-command: 
     runs-on: windows-latest
+    needs: ['run-shell-command']
     steps:
       - name: Directory PowerShell
         run: Get-Location
